# farmexa

./: .dockerignore  .env.example  .gitattributes  .gitignore  .replit  DEPLOYMENT.md  Dockerfile  INVENTORY_COORDINATION_REFACTOR_REPORT.md  apply-fixes.sh  commit_diff.txt  deploy.sh  diff.txt  docker-compose.prod.yml  docker-compose.yml  migration_copy.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: test.yml
backend/: Dockerfile  alembic.ini  create_tables.py  debug_dashboard.py  fix_tenant.py  get_users.py  inspect_batches.py  requirements.txt  seed_coa.py  test_analytics.py  test_orm_execute.py  test_pos.py  trigger_sync.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_farm_and_feed.py  003_operations_modules.py  004_egg_tenant_subscription.py  005_user_tenant_scope.py  006_saas_foundation.py  007_domain_upgrades_and_slaughter_workflow.py  (+32 more)
backend/app/: main.py
backend/tests/: conftest.py  test_accounting_decimal_safety.py  test_alembic_migrations.py  test_erp_rules.py  test_feed_serializers.py  test_hr_payroll.py  test_inventory_refactor.py  test_suppliers_pricing.py  test_tenant_routing_rules.py
docker/: coolify-nginx.conf  start-coolify.sh
frontend/: Dockerfile  eslint.config.mjs  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: manifest.webmanifest  robots.txt  service-worker.js  sitemap.xml
frontend/src/: App.tsx  index.css  main.tsx
nginx/: farmexa.arosoft.io.conf  nginx.conf
scripts/: backup.sh  restore.sh
(+242 files in other folders)
