[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "bcrypt==4.0.1",
    "celery==5.4.0",
    "email-validator==2.2.0",
    "fastapi==0.115.5",
    "greenlet==3.1.1",
    "httpx==0.28.1",
    "kombu==5.4.2",
    "openpyxl==3.1.5",
    "orjson==3.10.12",
    "psycopg2-binary==2.9.10",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.18",
    "pytz==2024.2",
    "redis==5.2.1",
    "reportlab==4.2.5",
    "sqlalchemy==2.0.36",
    "uvicorn[standard]==0.32.1",
]
